[package]
name = "dwqrs"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = { version = "*" }
clap = { git = "https://github.com/clap-rs/clap/" }
crossbeam-channel = "0.4"
#crossbeam-utils = "0.7"
disque = { version = "*" }
rand = { version = "*" }
redis = { version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

failure = { version = "*" }
exitfailure = { version = "*" }
signal-hook = { version = "*" }
collect_slice = "^1.2.0"
itertools = { version = "*" }
indicatif = { version = "*" } # git = "https://github.com/mibac138/indicatif", branch = "visibility" }
ansi-escapes = { version = "*" }
shellexpand = { version = "2.0" }
